[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/BaseStompableSlashableEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/JumpingPatrollingEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49, 8 )

[node name="JumpingPatrollingEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="DetectionZone" type="Area2D" parent="." index="5"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone" index="0"]
shape = SubResource( 1 )

[connection signal="body_entered" from="HurtChecker" to="." method="_on_HurtChecker_body_entered"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
